--- a/WebApp9Soft/WebApp9Soft.csproj
+++ b/WebApp9Soft/WebApp9Soft.csproj
@@ -284,6 +284,14 @@
     <Content Include="assets\images\icons\aeroland-black-button-google-play.jpg" />
     <Content Include="assets\images\icons\aeroland-button-app-store.jpg" />
     <Content Include="assets\images\icons\aeroland-button-google-play.jpg" />
+    <Content Include="assets\images\icons\attachments\Digital Marketing white.png" />
+    <Content Include="assets\images\icons\attachments\e commerce white.png" />
+    <Content Include="assets\images\icons\attachments\Graphics white.png" />
+    <Content Include="assets\images\icons\attachments\SEO white.png" />
+    <Content Include="assets\images\icons\attachments\social media management white.png" />
+    <Content Include="assets\images\icons\attachments\web design white.png" />
+    <Content Include="assets\images\icons\attachments\web development white.png" />
+    <Content Include="assets\images\icons\attachments\web hosting white.png" />
     <Content Include="assets\images\icons\hero-selector-icon.png" />
     <Content Include="assets\images\icons\light-close.png" />
     <Content Include="assets\images\icons\metro-quote.png" />
@@ -326,6 +334,14 @@
     <Content Include="assets\images\icons\mitech-processing-service-image-06-80x83.png" />
     <Content Include="assets\images\icons\quote.png" />
     <Content Include="assets\images\icons\selector-icon.png" />
+    <Content Include="assets\images\icons\vectors\Digital Marketing.png" />
+    <Content Include="assets\images\icons\vectors\e commerce.png" />
+    <Content Include="assets\images\icons\vectors\Graphics.png" />
+    <Content Include="assets\images\icons\vectors\SEO.png" />
+    <Content Include="assets\images\icons\vectors\social media management.png" />
+    <Content Include="assets\images\icons\vectors\web design.png" />
+    <Content Include="assets\images\icons\vectors\web development.png" />
+    <Content Include="assets\images\icons\vectors\web hosting.png" />
     <Content Include="assets\images\logo\dark-logo-160x48.png" />
     <Content Include="assets\images\logo\dark-logo.png" />
     <Content Include="assets\images\logo\light-logo.png" />
