--- a/WebApp9Soft/WebApp9Soft.csproj
+++ b/WebApp9Soft/WebApp9Soft.csproj
@@ -153,6 +153,12 @@
     <Content Include="assets\images\award\mitech-company-award-02-161x116.jpg" />
     <Content Include="assets\images\award\mitech-company-award-03-161x112.jpg" />
     <Content Include="assets\images\award\mitech-company-award-04-161x109.jpg" />
+    <Content Include="assets\images\banner%28new%29\Digital Marketing &amp; Social Media Management.jpg" />
+    <Content Include="assets\images\banner%28new%29\E commerce.jpg" />
+    <Content Include="assets\images\banner%28new%29\Graphic design banner.jpg" />
+    <Content Include="assets\images\banner%28new%29\SEO.jpg" />
+    <Content Include="assets\images\banner%28new%29\web design banner.jpg" />
+    <Content Include="assets\images\banner%28new%29\web hosting.jpg" />
     <Content Include="assets\images\banners\home-cybersecurity-contact-bg-image.png" />
     <Content Include="assets\images\banners\home-processing-video-intro-slider-slide-01-image-01.jpg" />
     <Content Include="assets\images\banners\home-processing-video-intro-slider-slide-01-image-02.jpg" />
@@ -264,10 +270,18 @@
     <Content Include="assets\images\flags\de.png" />
     <Content Include="assets\images\flags\en.png" />
     <Content Include="assets\images\flags\fr.png" />
+    <Content Include="assets\images\gallery%28new%29\Gallery Image 1.jpg" />
+    <Content Include="assets\images\gallery%28new%29\Gallery Image 2.jpg" />
+    <Content Include="assets\images\gallery%28new%29\Gallery Image 3.jpg" />
+    <Content Include="assets\images\gallery%28new%29\Gallery Image 4.jpg" />
     <Content Include="assets\images\gallery\blog-06-960x960.jpg" />
     <Content Include="assets\images\gallery\blog-07-960x960.jpg" />
     <Content Include="assets\images\gallery\blog-08-960x960.jpg" />
     <Content Include="assets\images\gallery\careers-gallery-image-01-960x960.jpg" />
+    <Content Include="assets\images\gallery\Gallery Image 1.jpg" />
+    <Content Include="assets\images\gallery\Gallery Image 2.jpg" />
+    <Content Include="assets\images\gallery\Gallery Image 3.jpg" />
+    <Content Include="assets\images\gallery\Gallery Image 4.jpg" />
     <Content Include="assets\images\hero\home-appointment-hero-bg-image.jpg" />
     <Content Include="assets\images\hero\home-infotechno-main-slider-slide-01-image-01.png" />
     <Content Include="assets\images\hero\home-infotechno-main-slider-slide-01-image-02.png" />
