Home content Change

--- a/WebApp9Soft/WebApp9Soft.csproj
+++ b/WebApp9Soft/WebApp9Soft.csproj
@@ -423,6 +423,7 @@
     <Content Include="assets\images\team\team-member-06-370x455.jpg" />
     <Content Include="assets\images\team\team-member-07-370x250.jpg" />
     <Content Include="assets\images\team\team-member-07-370x455.jpg" />
+    <Content Include="assets\images\testimonial\90x90.jpg" />
     <Content Include="assets\images\testimonial\mitech-testimonial-avata-01-70x70.jpg" />
     <Content Include="assets\images\testimonial\mitech-testimonial-avata-01-90x90.jpg" />
     <Content Include="assets\images\testimonial\mitech-testimonial-avata-02-70x70.jpg" />
