--- a/WebApp9Soft/WebApp9Soft.csproj
+++ b/WebApp9Soft/WebApp9Soft.csproj
@@ -550,6 +550,7 @@
     <Content Include="Views\Services\ECommerceDetail.cshtml" />
     <Content Include="Views\Home\pvConactusSection.cshtml" />
     <Content Include="Views\Home\pvTestimonialSection.cshtml" />
+    <Content Include="Views\Home\pvLetsTalkSection.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
